--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,13 @@ section p:last-child {
   min-height: 100px;
 }
 
+.profile-picture {
+  width: 200px;
+  height: auto;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
 
 @media screen and (max-width: 768px) {
   nav ul {
