--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,20 @@ section p:last-child {
   margin-bottom: 20px;
 }
 
+.fullscreen-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://drive.google.com/uc?id=141Bt3by3UvYKmhD5NQzozfTs9mGqk07w');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+}
+
+
 
 @media screen and (max-width: 768px) {
   nav ul {
