--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@
 
 /* Basic styling */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Times New Roman", serif;
   line-height: 1.6;
   background-color: #f4f4f4;
+  color: #333;
 }
 
 header {
@@ -82,6 +83,7 @@ section p {
 section p:last-child {
   margin-bottom: 0;
 }
+
 #feedback {
   background-color: #f5f5f5;
   padding: 20px;
@@ -128,11 +130,10 @@ section p:last-child {
   z-index: -1;
 }
 
-
-
 @media screen and (max-width: 768px) {
   nav ul {
     flex-direction: column;
   }
 }
+
 
